src/test/ui/borrowck/borrowck-and-init.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: borrow of possibly uninitialized variable: `i`
=======
error[E0381]: borrow of possibly-uninitialized variable: `i`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/borrowck-and-init.rs:5:20
   |
LL |     println!("{}", i);
   |                    ^ use of possibly-uninitialized `i`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
